--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@types/react-redux-toastr": "^7.6.2",
+    "@types/redux-persist": "^4.3.1",
     "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
