--- a/backend/package.json
+++ b/backend/package.json
@@ -46,8 +46,10 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/app-root-path": "^1.2.4",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "28.1.4",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
