--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "react-hook-form": "^7.34.0",
     "react-icons": "^4.4.0",
     "react-loading-skeleton": "^3.1.0",
-    "react-query": "^4.0.0",
+    "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
     "react-redux-toastr": "^7.6.8",
     "redux-persist": "^6.0.0",
@@ -35,6 +35,7 @@
     "@types/node": "18.6.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-query": "^1.2.9",
     "@types/react-redux-toastr": "^7.6.2",
     "@types/redux-persist": "^4.3.1",
     "autoprefixer": "^10.4.8",
